// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard renders correctly when data is loaded 1`] = `
<div class="dashboard">
  <div class="dashboard__wrap">
    <div class="dashboard__wrap__main-area">
      <navigationarea-stub></navigationarea-stub>
      <div class="dashboard__wrap__main-area__content-wrap with-one-bar">
        <!---->
        <paidtierbar-stub openaddpmmodal="[Function]"></paidtierbar-stub>
        <!---->
        <!---->
        <router-view-stub name="default" class="dashboard__wrap__main-area__content-wrap__content"></router-view-stub>
      </div>
    </div>
  </div>
  <!---->
  <allmodals-stub></allmodals-stub>
</div>
`;

exports[`Dashboard renders correctly when data is loading 1`] = `
<div class="dashboard">
  <div class="loading-overlay active">
    <loaderimage-stub class="loading-icon"></loaderimage-stub>
  </div>
  <!---->
  <allmodals-stub></allmodals-stub>
</div>
`;
